# garrettdavis.dev

./: .gitignore  .terraform.lock.hcl  Cargo.toml  README.md  deploy.yaml  flake.nix  fly.toml  go.mod  go.sum  input.css  justfile  main.go  static.fonts.go  static.go  tailwind.config.js
.github/workflows/: fly.yaml
app/: Cargo.toml  input.css  tailwind.config.js
app/src/: lib.rs  main.rs
app/src/components/: error.rs  layout.rs  markdown.rs  mod.rs  notes.rs  template.rs
app/src/pages/: blog.rs  contact.rs  index.rs  mod.rs  notes.rs  presentations.rs  resume.rs
app/src/state/: config.rs  mod.rs  traits.rs
components/: layout.go  page.go
components/multifrontmatter/: split.go  split_test.go  transform_test.go
data/blog/: fenced-code-blocks-as-frontmatter.md  mobile-first-is-easier.md  simple-express-backend-1.md
data/presentations/: nix-demo.md
global/: logger.go
infra/: .terraform.lock.hcl  alb.tf  api.nix  cdn.nix  cdn.tf  dns.nix  dns.tf  ecs-old.tf  ecs.tf  lambda.nix  provider.tf  ses.nix  ses.tf  static.nix  static_files.nix  syncthing-ec2.nix  variables.tf  viewer_request.js  vpc.tf
middleware/: compose.go  context.go  db.go  ignoreindex.go  logger.go  markdown.go  mux.go  render.go  servefile.go  writerref.go
model/: contact_message.go  gh_access_token.go  subject.go  utility_types.go
resource/access/: auth.go  generic_assets.go  logger.go  session.go
resource/initialize/: caches.go  databases.go  enforcer.go  enforcer.model.conf
resource/internal/: context.go
resource/middleware/: authorization.go  generic_assets.go  ignore_index.go  logger_and_session.go  servefile.go  trailing_slash.go
resource/render/: page.go
routes/: 404.go  admin_coffee.go  admin_messages.go  admin_user.go  auth_callback.go  auth_signin.go  auth_signout.go  blog.go  coffee.go  contact.go  index.go  presentation.go  presentation.go.css  presentation.go.js  resume.go
routes/blog/: fenced-code-blocks-as-frontmatter.md
routes/presentation/: nix-demo.md
schema/: create-migration.sh  models.go
schema/migrations/: 1728537314_initial_schema.up.sql
service/blog/: svc.go
service/blog/data/: mobile-first-is-easier.md  simple-express-backend-1.md
service/currentuser/: svc.go
service/messages/: svc.go
service/object/: svc.go
service/presentations/: svc.go
service/presentations/data/: nix-demo.md
service/resume/: svc.go
service/resume/data/: default-resume.yaml
src/: input.css  lib.rs
src/components/: layout.rs  markdown.rs  mod.rs  template.rs
static/css/: style.css
utils/: render.go  util.go
utils/bimarshal/: bimarshal.go  cache.go  cachemap.go
utils/cookie/: definitions.go  delete.go
utils/multifrontmatter/: split_test.go  transform.go  transform_test.go
utils/mux/: mux.go  stack.go
utils/symetric/: symetric.go
