[package]
name = "garrettdavis-dev-cargo-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw"] }
base64 = "0.22.1"
http = "1.1.0"
lambda_runtime = "0.11.2"
maud = "0.26.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
