[package]
name = "garrettdavis-dev-cargo-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"

[dependencies]
ammonia = "4.0.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw"] }
base64 = "0.22.1"
gray_matter = "0.2.8"
http = "1.1.0"
lambda_runtime = "0.11.2"
maud = "0.26.0"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_html_form = "0.2.6"
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["serde", "parsing"] }
tokio = { version = "1.37.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
