[package]
name = "garrettdavis-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
gray_matter = "0.2.8"
http = "1.1.0"
inkjet = { version = "0.10.5", features = ["language-rust", "language-nix", "language-sql", "language-python", "language-html", "language-javascript", "language-jsx", "language-typescript", "language-tsx", "language-c", "html", "theme", "language-plaintext"], default-features = false }
maud = { version = "0.26.0", features = ["axum"] }
pulldown-cmark = "0.11.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_html_form = "0.2.6"
serde_json = "1.0.117"
tailwind_fuse = "0.3.1"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["serde", "parsing"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["compression-full", "fs"] }
